--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ mdurl==0.1.2
 pydantic==2.8.2
 pydantic_core==2.20.1
 Pygments==2.18.0
+PyJWT==2.9.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
